# pifcap

./: .gitignore  CHANGELOG  LICENSE  Makefile  README.md  pifcap.sh  setup.cfg  setup.py
src/pifcap/: autoexposure.py  camera.py  make_UI.bat  pifcap.py  pifcap2fits.py  pifcap_image.py  pifcap_ui.py  pifcap_ui.ui  settings.py  settings_ui.py  settings_ui.ui
