[metadata]
name = pifcap
version = 0.1.0
author = Ronald Schreiber
author_email = ronald.schreiber01@gmx.de
description = A GUI for fast RAW image capture on Raspberry Pi
long_description = file: README.md, CHANGELOG, LICENSE
long_description_content_type = text/markdown
url = https://github.com/scriptorron/pifcap
license_files = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    picamera2

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pifcap = pifcap.pifcap
